# Harbr-Router

./: Cargo.toml  Dockerfile  README.md  config.yml  config_new.yml  config_template.toml  docker-compose.yml  output.glue
kubernetes/: deployment.yml  hpa.yml  ingress.yml  namespace.yml  networkpolicy.yml  service.yml  servicemonitor.yml
kustomize/base/: kustomization.yaml
kustomize/overlays/development/: kustomization.yaml
kustomize/overlays/production/: kustomization.yaml
src/: affinity.rs  buffers.rs  config.rs  dynamic_config.rs  error.rs  http_proxy.rs  lib.rs  main.rs  management_api.rs  metrics.rs  modern_router.rs  new_config.rs  proxy.rs  router.rs  routing.rs  server.rs  tcp_proxy.rs  udp_proxy.rs
src copy/: client.rs  config.rs  config_api.rs  http_proxy.rs  metrics.rs  udp_proxy.rs
src/builtin_plugins/: mod.rs  tcp_proxy.rs
src/plugin/: loader.rs  manager.rs  mod.rs  registry.rs
src/proxies/: http.rs  mod.rs  tcp.rs  udp.rs
src/proxy/: http.rs  tcp.rs  udp.rs
