[package]
name = "harbr_router"
description = "A modular reverse proxy service written in Rust, designed for high performance and flexibility."
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"

[lib]
name = "harbr_router"
path = "src/lib.rs"

[[bin]]
name = "harbr-router"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.18", features = ["json", "stream"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.80"
serde_json = "1.0.109"
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = { version = "0.1.40", features = ["std"] }
warp = { version = "0.3.4" }