[package]
name = "harbr_router"
description = "A modular reverse proxy service written in Rust, designed for high performance and flexibility."
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"

[lib]
name = "harbr_router"
path = "src/lib.rs"

[[bin]]
name = "harbr-router"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
anyhow = "1.0"
futures-util = "0.3"
dashmap = "5.4"
bytes = "1.4"
warp = "0.3.7"
uuid = { version = "1.2", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
toml = "0.8"